tools/vz/pkg/analysis/test/cluster/ingress-oci-limit/cluster-snapshot/verrazzano-ingress-nginx/logs.txt
# Copyright (c) 2022, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
==== START logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll ====
2022-05-19T20:36:08.074493Z	info	Istio iptables environment:
ENVOY_PORT=
INBOUND_CAPTURE_PORT=
ISTIO_INBOUND_INTERCEPTION_MODE=
ISTIO_INBOUND_TPROXY_ROUTE_TABLE=
ISTIO_INBOUND_PORTS=
ISTIO_OUTBOUND_PORTS=
ISTIO_LOCAL_EXCLUDE_PORTS=
ISTIO_EXCLUDE_INTERFACES=
ISTIO_SERVICE_CIDR=
ISTIO_SERVICE_EXCLUDE_CIDR=
ISTIO_META_DNS_CAPTURE=
INVALID_DROP=

2022-05-19T20:36:08.074570Z	info	Istio iptables variables:
PROXY_PORT=15001
PROXY_INBOUND_CAPTURE_PORT=15006
PROXY_TUNNEL_PORT=15008
PROXY_UID=1337
PROXY_GID=1337
INBOUND_INTERCEPTION_MODE=REDIRECT
INBOUND_TPROXY_MARK=1337
INBOUND_TPROXY_ROUTE_TABLE=133
INBOUND_PORTS_INCLUDE=*
INBOUND_PORTS_EXCLUDE=15090,15021,8080,15020
OUTBOUND_IP_RANGES_INCLUDE=*
OUTBOUND_IP_RANGES_EXCLUDE=
OUTBOUND_PORTS_INCLUDE=
OUTBOUND_PORTS_EXCLUDE=
KUBE_VIRT_INTERFACES=
ENABLE_INBOUND_IPV6=false
DNS_CAPTURE=false
DROP_INVALID=false
CAPTURE_ALL_DNS=false
DNS_SERVERS=[],[]
OUTPUT_PATH=
NETWORK_NAMESPACE=
CNI_MODE=false
EXCLUDE_INTERFACES=

2022-05-19T20:36:08.075357Z	info	Writing following contents to rules file: /tmp/iptables-rules-1652992568074667657.txt1434187187
* nat
-N ISTIO_INBOUND
-N ISTIO_REDIRECT
-N ISTIO_IN_REDIRECT
-N ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A ISTIO_INBOUND -p tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 8080 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_OUTPUT -o lo -s REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT
2022-05-19T20:36:08.075420Z	info	Running command: iptables-restore --noflush /tmp/iptables-rules-1652992568074667657.txt1434187187
2022-05-19T20:36:08.091582Z	info	Writing following contents to rules file: /tmp/ip6tables-rules-1652992568091495869.txt495684863

2022-05-19T20:36:08.091629Z	info	Running command: ip6tables-restore --noflush /tmp/ip6tables-rules-1652992568091495869.txt495684863
2022-05-19T20:36:08.102684Z	info	Running command: iptables-save 
2022-05-19T20:36:08.114672Z	info	Command output: 
# Generated by iptables-save v1.4.21 on Thu May 19 20:36:08 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ISTIO_INBOUND - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
:ISTIO_REDIRECT - [0:0]
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 8080 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -s REDACTED-IP4-ADDRESS/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
# Completed on Thu May 19 20:36:08 2022

==== END logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll ====
==== START logs for container ingress-nginx-default-backend of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll ====
==== END logs for container ingress-nginx-default-backend of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll ====
==== START logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll ====
2022-05-19T20:36:34.012947Z	info	FLAG: --concurrency="2"
2022-05-19T20:36:34.012992Z	info	FLAG: --domain="ingress-nginx.svc.cluster.local"
2022-05-19T20:36:34.013002Z	info	FLAG: --help="false"
2022-05-19T20:36:34.013008Z	info	FLAG: --log_as_json="false"
2022-05-19T20:36:34.013014Z	info	FLAG: --log_caller=""
2022-05-19T20:36:34.013020Z	info	FLAG: --log_output_level="default:info"
2022-05-19T20:36:34.013027Z	info	FLAG: --log_rotate=""
2022-05-19T20:36:34.013033Z	info	FLAG: --log_rotate_max_age="30"
2022-05-19T20:36:34.013039Z	info	FLAG: --log_rotate_max_backups="1000"
2022-05-19T20:36:34.013045Z	info	FLAG: --log_rotate_max_size="104857600"
2022-05-19T20:36:34.013051Z	info	FLAG: --log_stacktrace_level="default:none"
2022-05-19T20:36:34.013062Z	info	FLAG: --log_target="[stdout]"
2022-05-19T20:36:34.013069Z	info	FLAG: --meshConfig="./etc/istio/config/mesh"
2022-05-19T20:36:34.013074Z	info	FLAG: --outlierLogPath=""
2022-05-19T20:36:34.013079Z	info	FLAG: --proxyComponentLogLevel="misc:error"
2022-05-19T20:36:34.013085Z	info	FLAG: --proxyLogLevel="warning"
2022-05-19T20:36:34.013091Z	info	FLAG: --serviceCluster="istio-proxy"
2022-05-19T20:36:34.013096Z	info	FLAG: --stsPort="0"
2022-05-19T20:36:34.013102Z	info	FLAG: --templateFile=""
2022-05-19T20:36:34.013109Z	info	FLAG: --tokenManagerPlugin="GoogleTokenExchange"
2022-05-19T20:36:34.013117Z	info	FLAG: --vklog="0"
2022-05-19T20:36:34.013124Z	info	Version 1.13.2-f84f69d1028e874d568f2942c5bab5271fcdeda7-Clean
2022-05-19T20:36:34.016652Z	info	Proxy role	ips=[REDACTED-IP4-ADDRESS fe80::1c34:fdff:fe21:54db] type=sidecar id=ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll.ingress-nginx domain=ingress-nginx.svc.cluster.local
2022-05-19T20:36:34.016775Z	info	Apply proxy config from env {}

2022-05-19T20:36:34.018843Z	info	Effective config: binaryPath: /usr/local/bin/envoy
concurrency: 2
configPath: ./etc/istio/proxy
controlPlaneAuthPolicy: MUTUAL_TLS
discoveryAddress: istiod.istio-system.svc:15012
drainDuration: 45s
parentShutdownDuration: 60s
proxyAdminPort: 15000
serviceCluster: istio-proxy
statNameLength: 189
statusPort: 15020
terminationDrainDuration: 5s
tracing:
  zipkin:
    address: zipkin.istio-system:9411

2022-05-19T20:36:34.018865Z	info	JWT policy is third-party-jwt
2022-05-19T20:36:34.055944Z	info	CA Endpoint istiod.istio-system.svc:15012, provider Citadel
2022-05-19T20:36:34.056011Z	info	Using CA istiod.istio-system.svc:15012 cert with certs: var/run/secrets/istio/root-cert.pem
2022-05-19T20:36:34.056145Z	info	citadelclient	Citadel client using custom root cert: var/run/secrets/istio/root-cert.pem
2022-05-19T20:36:34.057231Z	info	Opening status port 15020
2022-05-19T20:36:34.100473Z	info	ads	All caches have been synced up in 91.580134ms, marking server ready
2022-05-19T20:36:34.101227Z	info	sds	SDS server for workload certificates started, listening on "etc/istio/proxy/SDS"
2022-05-19T20:36:34.101274Z	info	xdsproxy	Initializing with upstream address "istiod.istio-system.svc:15012" and cluster "Kubernetes"
2022-05-19T20:36:34.103669Z	info	sds	Starting SDS grpc server
2022-05-19T20:36:34.104301Z	info	Pilot SAN: [istiod.istio-system.svc]
2022-05-19T20:36:34.104644Z	info	starting Http service at REDACTED-IP4-ADDRESS:15004
2022-05-19T20:36:34.106653Z	info	Starting proxy agent
2022-05-19T20:36:34.106698Z	info	Epoch 0 starting
2022-05-19T20:36:34.106728Z	info	Envoy command: [-c etc/istio/proxy/envoy-rev0.json --restart-epoch 0 --drain-time-s 45 --drain-strategy immediate --parent-shutdown-time-s 60 --local-address-ip-version v4 --file-flush-interval-msec 1000 --disable-hot-restart --log-format %Y-%m-%dT%T.%fZ	%l	envoy %n	%v -l warning --component-log-level misc:error --concurrency 2]
2022-05-19T20:36:34.262413Z	info	cache	generated new workload certificate	latency=160.723092ms ttl=23h59m59.737604953s
2022-05-19T20:36:34.262454Z	info	cache	Root cert has changed, start rotating root cert
2022-05-19T20:36:34.262482Z	info	ads	XDS: Incremental Pushing:0 ConnectedEndpoints:0 Version:
2022-05-19T20:36:34.262584Z	info	cache	returned workload trust anchor from cache	ttl=23h59m59.737419742s
2022-05-19T20:36:35.159254Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
2022-05-19T20:36:35.542804Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll.ingress-nginx-1
2022-05-19T20:36:35.543859Z	info	cache	returned workload trust anchor from cache	ttl=23h59m58.456151243s
2022-05-19T20:36:35.544495Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll.ingress-nginx resources:1 size:2.0kB resource:ROOTCA
2022-05-19T20:36:35.583064Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll.ingress-nginx-2
2022-05-19T20:36:35.583204Z	info	cache	returned workload certificate from cache	ttl=23h59m58.416804176s
2022-05-19T20:36:35.583389Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll.ingress-nginx resources:1 size:9.2kB resource:default
2022-05-19T20:36:37.008575Z	info	Readiness succeeded in 2.998641236s
2022-05-19T20:36:37.009059Z	info	Envoy proxy is ready
2022-05-19T21:04:08.385138Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
==== END logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b88w5ll ====
